[tool.poetry]
name = "car-auction-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
black = "^22.6.0"
flake8 = "^4.0.1"
flakeheaven = "^2.0.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.flakeheaven]
exclude = [".git", "venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
